Sprint 24 - Task Two, extracted modules: request-service and event-service.